css/style.css
/* ... */
/* Clear fix hack */
.clearfix:after {
     content: ".";
     display: block;
     clear: both;
     visibility: hidden;
     line-height: 0;
     height: 0;
}

.clear {
	clear: both;
}

/******************************************
/* BASE STYLES
/*******************************************/
html {
     font-size: 62.5%;
     font-weight: 500;
     font-family: 'JetBrains Mono', monospace;
     vertical-align: baseline;
}
body {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     font-size: 4rem;
     background-color: #2a2f4a;
}



/******************************************
/* LAYOUT
/*******************************************/
header {
     padding: 4rem;
}
img {
     vertical-align: middle;
}
h1, h2 {
     -webkit-text-stroke: .03em black;
}
h2 {
     font-size: 6rem;
     text-transform: uppercase;
     font-weight: 500;
     line-height: 1.4;
     margin-bottom: 0.5rem;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
     color: white;
     text-align: left;
}
h3 {
     color: white;
     border-bottom: 1px solid #fefefe;
}
p {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     /* padding: 5rem; */
     color: white;
}
a {
     text-decoration: none;
}
/******************************************
/* NAV MENU
/*******************************************/
nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
}
.navLogo {
     font-size: 3rem;
     color: rgba(3, 1, 40);;
     background: white;
     padding: 2rem;
}
.menuWide {
     display: none;
     width: 40%;
     list-style-type: none;
}
.menuItemWide {
     margin-top: 0;
     color: white;
     padding: 3rem;
}

.menuItem {
     display: block;
     margin: 6rem 4rem;
     font-size: 5rem;
     color: rgb(215, 214, 214);
     text-decoration: none;
}
.menuItem:hover {
     text-decoration: underline;
}
.hamburger {
     position: absolute;
     z-index: 100;
     top: 3rem;
     right: 4rem;
     padding: 4px;
     border: none;
     background: none;
     cursor: pointer;
     color: white;
}
.menu {
     position: fixed;
     transform: translateY(-200%);
     transition: transform 0.2s;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: 99;
     background: rgb(0, 9, 46);
     color: rgb(255, 255, 255);
     list-style: none;
     padding-top: 10rem;
     padding-left: 3rem;
}
.showMenu {
     transform: translateY(0);
     height: 80rem;
}
.menuIcon {
     font-size: 8rem;  
}


/******************************************
/* MAIN
/*******************************************/
.banner {
     background-position: center 35%;
     height: 400px;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
     position: relative;
     background-size: cover;
     padding-bottom: 17rem;
     padding-left: 4rem;
}
#banner1 {
     background-image: url(https://images.unsplash.com/photo-1663140102681-924817ef3337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
}
#ban1 {
     background-image: url(https://images.unsplash.com/photo-1488646953014-85cb44e25828?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1035&q=80);
}

.mainName, .mainSlogan {
     z-index: 6;
     color: white;
     margin: 0 20px;
     line-height: 1.4;
}
.mainName {
     font-size: 6rem;
     font-weight: 200;
     padding-bottom: 1rem;
     border-bottom: 5px solid #fefefe;
     margin-bottom: 1rem;
}
.mainSlogan {
     font-size: 4rem;
     font-weight: 0;
     padding-bottom: 6rem;
}
/******************************************
/* MIDDLE SECTIONS
/*******************************************/
#banner2 {
     background-image: url(https://images.unsplash.com/photo-1662826305025-51e2cec5f89d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
}
#ban2 {
     background-image: url(https://images.unsplash.com/photo-1662826305025-51e2cec5f89d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
}
#banner3 {
     background-image: url(https://images.unsplash.com/photo-1635997437134-b8505870263f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
}
#banner4 {
     background-image: url(https://images.unsplash.com/photo-1662929728655-0acc9aabf01c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1150&q=80);
}
#banner5 {
     background-image: url(https://images.unsplash.com/photo-1662920391043-060ba2687a37?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1964&q=80);
}
#ban5 {
     background-image: url(https://images.unsplash.com/photo-1662920391043-060ba2687a37?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1964&q=80);
}
#banner6 {
     background-image: url(https://images.unsplash.com/photo-1662988812744-05c24c4f6270?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80);
}
#ban6 {
     background-image: url(https://images.unsplash.com/photo-1662988812744-05c24c4f6270?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80);
}
#banner7 {
     background-image: url(https://images.unsplash.com/photo-1662388114037-fbdf75ac435a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=695&q=80);
}
.overlay {
     position: absolute;
     left: 0;
     top: 0;
     height: 100%;
     width: 100%;
     z-index: 3;
}
.overlay:hover {
     background-color: none;
}
#overlay1 {
     background-color: #242943bc;
     
}
#overlay2 {
     background-color: rgba(9, 118, 148, 0.8);
}
#overlay3 {
     background-color: rgba(72, 9, 148, 0.8);
}
/* ... */

